--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Document</title>
+  <style>
+    .game-header {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 960px;
+      height: 100px;
+    }
+
+    .bar {
+      width: 40%;
+      height: 30%;
+      background-color: red;
+    }
+
+    .bar div {
+      width: 100%;
+      height: 100%;
+      background-color: yellow;
+    }
+
+    .left {
+      text-align: end;
+    }
+
+    .timer {
+      width: 10%;
+      height: 100%;
+      background-color: blue;
+    }
+  </style>
 </head>
 <body>
+  <div class="game-header">
+    <div class="bar left">
+      <div id="health-1"></div>
+    </div>
+    <div class="timer"></div>
+    <div class="bar">
+      <div id="health-2"></div>
+    </div>
+  </div>
   <canvas id="canvas"></canvas>  
   <script src="script.js"></script>
 </body>
