--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     </div>
   </div>
   <div id="game-status"></div>
+
   <canvas id="canvas"></canvas>  
+  <script src="sprite.js"></script>
+  <script src="fighter.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
