--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
   </div>
   <div id="game-status"></div>
 
-  <canvas id="canvas"></canvas>  
+  <canvas id="canvas"></canvas>
   <script src="sprite.js"></script>
+  <script src="attack.js"></script>
   <script src="fighter.js"></script>
   <script src="script.js"></script>
 </body>
