--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
   <canvas id="canvas"></canvas>
   <script src="sprite.js"></script>
+  <script src="data.js"></script>
   <script src="attack.js"></script>
   <script src="fighter.js"></script>
   <script src="script.js"></script>
