add page styling

--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Document</title>
   <style>
+    html {
+      background-color: black;
+    }
+
+    canvas {
+      padding: 0;
+      margin: auto;
+      display: block;
+    }
+
     .game-header {
       position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: auto;
+      padding: 0;
       width: 960px;
       height: 100px;
     }
