--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </canvas>
   <script src="sprite.js"></script>
   <script src="data.js"></script>
+  <script src="menu.js"></script>
   <script src="attack.js"></script>
   <script src="fighter.js"></script>
   <script src="script.js"></script>
