various bug fixes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     id="canvas" 
     style="margin: auto; display: block">
   </canvas>
-  <script src="sprite.js"></script>
-  <script src="data.js"></script>
-  <script src="menu.js"></script>
-  <script src="attack.js"></script>
-  <script src="fighter.js"></script>
-  <script src="script.js"></script>
+  <script src="./sprite.js"></script>
+  <script src="./data.js"></script>
+  <script src="./menu.js"></script>
+  <script src="./attack.js"></script>
+  <script src="./fighter.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
